test node version on ubuntu

--- a/.github/workflows/workflow-2.yml
+++ b/.github/workflows/workflow-2.yml
@@ -7,4 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: test flow
-        run: echo "hello world"
+        run: |
+          node -v
+          npm -v
