--- a/.github/workflows/workflow-2.yml
+++ b/.github/workflows/workflow-2.yml
@@ -11,3 +11,11 @@ jobs:
           node -v
       - name: test 2
         run: npm -v
+
+  second-workflow:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: check os name
+        run: uname
+      - name: check current directory
+        run: pwd
