--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Zip Files for Deployment
         run: |
           mkdir -p deploy-package
-          cp -R .next public package-lock.json package.json deploy-package/
+          cp -R .next public node_modules package-lock.json package.json deploy-package/
           cd deploy-package
           zip -r project.zip .
 
