--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,7 @@ jobs:
           node -v
           npm install
           npm run build
+          npm start
 
       - name: Zip Files for Deployment
         run: |
