--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,14 +11,8 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 22.13.0
-
       - name: Install Dependencies
         run: |
-          node -v
           npm install
           npm run build
 
@@ -36,7 +30,7 @@ jobs:
 
       - name: Copy Package to VM
         run: |
-          scp -o StrictHostKeyChecking=no deploy-package/project.zip ${{ secrets.VM_USER }}@${{ secrets.VM_HOST }}:${{ secrets.DEST_FOLDER }}
+          rsync -avz --progress --info=progress2 -e "ssh -o StrictHostKeyChecking=no" deploy-package/project.zip ${{ secrets.VM_USER }}@${{ secrets.VM_HOST }}:${{ secrets.DEST_FOLDER }}
 
       - name: SSH into VM and Deploy
         run: |
