download and upload speed test

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,10 +16,19 @@ jobs:
           npm install
           npm run build
 
+      - name: Download SQLite database from S3
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
+          S3_DB_FILE_PATH: ${{ secrets.S3_DB_FILE_PATH }}
+        run: |
+          aws s3 cp s3://$S3_BUCKET_NAME/$S3_DB_FILE_PATH ./database
+
       - name: Zip Files for Deployment
         run: |
           mkdir -p deploy-package
-          cp -R .next public package-lock.json package.json deploy-package/
+          cp -R .next public package-lock.json database package.json deploy-package/
           cd deploy-package
           zip -r project.zip .
 
@@ -30,6 +39,7 @@ jobs:
 
       - name: Copy Package to VM
         run: |
+          ls -l project.zip -h
           rsync -avz --progress --info=progress2 -e "ssh -o StrictHostKeyChecking=no" deploy-package/project.zip ${{ secrets.VM_USER }}@${{ secrets.VM_HOST }}:${{ secrets.DEST_FOLDER }}
 
       - name: SSH into VM and Deploy
